fixing cut off content on iphone 6+

--- a/src/assets/css/style-reset.css
+++ b/src/assets/css/style-reset.css
@@ -750,7 +750,7 @@ padding: 15px;
 
 .wr input {
     display: block;
-    padding: 15px 8px 8px 0;
+    padding: 8px 8px 8px 0;
     width: 25%;
     text-align: center;
     border: none;
